--- a/google2.html
+++ b/google2.html
@@ -13,7 +13,7 @@
   <a href="https://www.google.com.mx/imghp?hl=es&tab=wi&authuser=0">Imágenes</a>
 </div>
 
-<div class="centrar">
+ <div class="centrar customClass">
   <img alt="Google" height="92" id="hplogo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" srcset="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png 1x, /images/branding/googlelogo/2x/googlelogo_color_272x92dp.png 2x" style="padding-top:109px" width="272" onload="window.lol&amp;&amp;lol()" data-atf="1">
 </div>
 <div>
